objects/Jira_Issues__c.object
<CustomObject>
    <description>This object contains the Records of the Jira Issues.</description>
    <fields>
        <fullName>Assignee_Name__c</fullName>
        <label>Assignee Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Creator_Name__c</fullName>
        <label>Creator Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fix_Version__c</fullName>
        <label>Fix Version</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IssueTypeDescription__c</fullName>
        <label>IssueTypeDescription</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IssueTypeName__c</fullName>
        <label>IssueTypeName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issue_Key__c</fullName>
        <description>Contains the Issue key from jira.</description>
        <externalId>true</externalId>
        <label>Issue Key</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Issue_Sprint_Name__c</fullName>
        <label>Issue Sprint Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Category_Description__c</fullName>
        <label>Project Category Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Category_Name__c</fullName>
        <label>Project Category Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <label>Project Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporter_Name__c</fullName>
        <label>Reporter Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sprint_Names__c</fullName>
        <label>Sequence</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status_Category__c</fullName>
        <label>Status Category</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Story_Point__c</fullName>
        <label>Story Point</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <label>Summary</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Jira Issue</label>
    <nameField>
        <displayFormat>IS-{0000000}</displayFormat>
        <label>JIRA-Auto No in SF</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Jira Issues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>